# crop-yield-prediction

./: Dockerfile  README.md  business_report_template.md  crop_yield_prediction.ipynb  generate_history.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yaml
data/processed/: merged_data.csv
docs/: CI_CD.md
mlruns/0/: meta.yaml
mlruns/798679972673663490/: meta.yaml
mlruns/798679972673663490/10fed3bbfb1f49afa7923ae324b8c3db/: meta.yaml
mlruns/798679972673663490/10fed3bbfb1f49afa7923ae324b8c3db/metrics/: mae  profitability_error  r2  rmse
mlruns/798679972673663490/8987bf15ab6d4c37addc4681f42d9c8e/: meta.yaml
mlruns/798679972673663490/8987bf15ab6d4c37addc4681f42d9c8e/metrics/: mae  profitability_error  r2  rmse
mlruns/798679972673663490/a072a0e02a8e4bcb8e0d774a0630e328/: meta.yaml
mlruns/798679972673663490/a072a0e02a8e4bcb8e0d774a0630e328/metrics/: mae  profitability_error  r2  rmse
mlruns/798679972673663490/d9d7b556fcbb42fb814e1475812d2e2b/: meta.yaml
mlruns/798679972673663490/d9ea44ca5ccb45b0a843fcd8e09faddd/: meta.yaml
mlruns/798679972673663490/d9ea44ca5ccb45b0a843fcd8e09faddd/metrics/: mae  profitability_error  r2  rmse
mlruns/798679972673663490/d9ea44ca5ccb45b0a843fcd8e09faddd/tags/: mlflow.runName
mlruns/798679972673663490/f541e4b8dcc449658c9e8f39e192b26f/: meta.yaml
mlruns/798679972673663490/f541e4b8dcc449658c9e8f39e192b26f/metrics/: mae  profitability_error  r2  rmse
models/: best_model.pkl
src/: app.py  data_preprocessing.py  streamlit_app.py  train_model.py
tests/: test_api.py
(+44 files in other folders)
