[project]
name = "crop-yield-prediction"
version = "0.1.0"
description = ""
authors = ["iyedjaziri <iyedjaziri@gmail.com>"]
readme = "README.md"



requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
