[tool.poetry]
name = "crop-yield-prediction"
version = "0.1.0"
description = "Crop Yield Prediction Project"
authors = ["iyedjaziri <iyedjaziri@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.3.3"
numpy = "^2.3.5"
scikit-learn = "^1.7.2"
mlflow = "^3.6.0"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
streamlit = "^1.51.0"
joblib = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
